--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,12 @@ h1 {
     color: #fdfcfc;
 }
 
+/* Apply Myriad Pro Regular */
+p, h3 {
+    font-family: "myriad-pro", sans-serif;
+    font-weight: 400; /* Regular */
+}
+
 header {
     background-color: #333;
     color: rgb(253, 251, 251);
